# fedgenie3-featurecloud

./: .dockerignore  .gitignore  Dockerfile  README.md  async_fed_sim.py  launch.sh  pyproject.toml  schema.py  states.py
server_config/: supervisord.conf
src/: aggregation.py  config.py  simulation.py
utils/: aggregation.py  initial.py  simulation.py
