[project]
name = "fedgenie3-featurecloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "featurecloud>=0.1.0",
    "genie3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.uv.sources]
genie3 = { path = "genie3", editable = true }
